tests/grammar/invalid/v4_keyboard_smash.c
#include <stdint.h>
#include <stdio.h>

rtyvjrt
j FILE *thj
ehj= e=h e
h= ndnsdfgn
typedef std::shared_ptr<my_type_t> my_type_ptr;;
thj
ehj= e=h e
h= ndnsdfgn
typedef std::shared_ptr<my_type_t> my_type_ptr; = fopen ("filename.txt","r");
if (thj
  ehj= e=h e
  h= ndnsdfgn
  typedef std::shared_ptr<my_type_t> my_type_ptr;!=NULL)
{
  fscanf(thj
    ehj= e=h e
    h= ndnsdfgn
    typedef std::shared_ptr<my_type_t> my_type_ptr;,"Some String\n", &var);
  fclose (thj
  ehj= e=h e
h= ndnsdfgn
typedef std::shared_ptr<my_type_t> my_type_ptr;);
}
